--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     -->
                     <a href="https://github.com/kalpana-kasetty"style="--i:10" target="_blank"><i class='bx bxl-github'></i></a>
                 </div>
-                <a href="https://drive.google.com/file/d/15UMnK8FRO_anR0o2PjBlyfyad2-d_kjH/view?usp=sharing" style="--i:11" class="btn-box" target="_blank">Download Resume</a>
+                <a href="https://drive.google.com/file/d/18hg7U2EUyaOJloaHDLrXmFcqA6hekcly/view?usp=sharing" class="btn-box" target="_blank">Download Resume</a>
             </div>
         </section>
 
@@ -63,7 +63,7 @@
                        I am eager to contribute my skills and learn from experienced professionals in a dynamic work environment.
                       <br>
                         <br>
-                        <a href="https://drive.google.com/file/d/15UMnK8FRO_anR0o2PjBlyfyad2-d_kjH/view?usp=sharing" style="--i:11" class="abtbtn-box" target="_blank">Download Resume</a>
+                        <a href="https://drive.google.com/file/d/18hg7U2EUyaOJloaHDLrXmFcqA6hekcly/view?usp=sharing" style="--i:11" class="abtbtn-box" target="_blank">Download Resume</a>
                     </p>
                 </div>
             </div>
